Re-ordered the project tree to be more coherent

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,18 @@
-rootProject.name = 'football-league-tracker'
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+    plugins {
+        id "org.springframework.boot" version "3.5.6"
+        id "io.spring.dependency-management" version "1.1.6"
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories { mavenCentral() }
+}
+
+rootProject.name = "football-league-tracker"
+include("team-service", "league-tracker")
