--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,18 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.5.6'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id "org.springframework.boot" version "3.5.6" apply false
+    id "io.spring.dependency-management" version "1.1.7" apply false
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-description = 'football-league-tracker'
+// common config for all modules
+subprojects {
+    apply plugin: "java"
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
+    group = "com.example"
+    version = "0.0.1-SNAPSHOT"
 
-repositories {
-    mavenCentral()
-}
+    java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    runtimeOnly 'com.h2database:h2'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+    //repositories { mavenCentral() }
 
-tasks.named('test') {
-    useJUnitPlatform()
+    tasks.test { useJUnitPlatform() }
 }
