--- a/team-service/build.gradle
+++ b/team-service/build.gradle
@@ -1,11 +1,9 @@
 plugins {
-    id 'java'
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
 }
 
-group = 'com.oos'
-version = '0.0.1-SNAPSHOT'
+description = "team-service"
 
 java {
     toolchain { languageVersion = JavaLanguageVersion.of(17) }
@@ -19,8 +17,4 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-tasks.test {
-    useJUnitPlatform()
 }
