--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 }
 
 rootProject.name = "football-league-tracker"
-include("team-service", "league-tracker")
+include("team-service", "league-tracker", "match-service", "score-service")
